More transformation active checkbox design tweeks

--- a/DragonBallV3.css
+++ b/DragonBallV3.css
@@ -1128,35 +1128,38 @@ input.sheet-spell-edit[value="0"] ~ .sheet-spell-display{
 .sheet-transformations-active{
     grid-area: active;
 }
-.sheet-transformations-active input[type="checkbox"]{
-    height: 100%;
+.sheet-transformations-active-input[type="checkbox"]{
+    height:100%;
     width: 52px;
     opacity:0;
 }
 .sheet-transformations-active-span{
-    background:gray;
-    border: 1px solid white;
-    border-radius:16px;
-    position:absolute;
-    left: 16px;
-    width: 52px;
-    height: 26px;
+    position: absolute;
+    display: block;
+    background: gray;
+    border-radius:32px;
+    border:1px solid white;
+    width: 38px;
+    height: 20px;
 }
 .sheet-transformations-active-span:before{
-    background-color:#555;
     content:"";
-    border-radius:16px;
+    width:18px;
+    height:18px;
     position:absolute;
-    left: 1px;
-    top: 1px;
-    width: 24px;
-    height: 24px;
+    left:1px;
+    top:1px;
+    background:dimgray;
+    border-radius:9px;
+    transition:0.1s;
 }
-.sheet-transformations-active-input[type="checkbox"]:checked + .sheet-transformations-active-span{
-    background-color:darkgray;
-}
-.sheet-transformations-active-input[type="checkbox"]:checked + .sheet-transformations-active-span:before {
-    background:white;
+.sheet-transformations-active-input[type="checkbox"]:checked ~ .sheet-transformations-active-span{
+    background:lightgray;
+    transition:0.1s;
+}.sheet-transformations-active-input[type="checkbox"]:checked ~ .sheet-transformations-active-span:before{
+    background:#eee;
+    left:19px;
+    transition:0.1s;
 }
 .sheet-transformations-name{
     grid-area: name;
